--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -69,6 +69,21 @@ h1 .contact-icon {
     background-color: #3700b3;
 }
 
+.submit-button::after {
+    content: 'Sorry,feature in progress';
+    display: none;
+    color: red; /* Example color */
+    font-size: 14px; /* Example font size */
+    /* Add other styling as needed */
+}
+
+.submit-button.clicked::after {
+    display: block;
+    /* Additional styles for the visible state */
+}
+
+
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
     .form-row {
