--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -13,8 +13,8 @@ h1 .contact-icon {
 
 .contact-form-container {
     position: relative; 
-    max-width: 600px;
-    min-height:600px;
+    max-width: 700px;
+    min-height:700px;
     margin: 100px auto;
     padding: 2rem;
     background: #fff;
@@ -98,6 +98,11 @@ h1 .contact-icon {
         width: 100%; /* Full width on smaller screens */
         margin-top: 1rem; /* Space above the button */
     }
+    .contact-form-container {
+        max-width:80%; /* Adjust the width to 90% of the viewport width */
+       
+    }
+   
 }
 
 
