--- a/CSS/body.css
+++ b/CSS/body.css
@@ -1,3 +1,4 @@
+
 html, body {
     height: 100%;
     padding:0;
@@ -12,6 +13,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    font-family:"Poppins", sans-serif;
 }
 
 main {
