--- a/CSS/index.css
+++ b/CSS/index.css
@@ -108,11 +108,12 @@
     text-decoration: none;
     cursor: pointer;
     transition: all 0.3s ease;
-   
+    font-family: sans-serif;
 }
 
 .buttons .button:hover {
-    background-color: orange;
+    background-color: black;
+    color:#fff;
     border: none;
 }
 
