--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,12 +1,26 @@
+:root {
+    --text-color: black; /* Default text color for day mode */
+    --background-color: white; /* Default background color for day mode */
+    /* Define other variables as needed */
+}
+
+body.night-mode {
+    --text-color: black; /* Text color for night mode */
+    --background-color: white; /* Background color for night mode */
+}
+
+
 footer {
     text-align: center;
     padding: 20px;
-    color: black;
+    transition: background-color 0.3s ease; /* Smooth transition for the background color */
+    background-color: white;
 }
 
 .footer-icons a {
     margin: 0 10px; /* Adjust spacing around icons */
     display: inline-block; /* Align icons inline */
+    
 }
 
 .footer-icons img {
@@ -17,4 +31,5 @@ footer {
 .footer-text {
     margin-top: 20px; /* Space above the text */
     padding-bottom: 2rem;
+    color: black;
 }
