--- a/CSS/newproject.css
+++ b/CSS/newproject.css
@@ -261,4 +261,11 @@ body.night-mode {
         top:15px;
         
     }
+
+    #controls {
+        position:relative;
+        right:5px;
+    }
+
+  
 }
