--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -14,6 +14,7 @@ footer {
     text-align: center;
     padding: 20px;
     transition: background-color 0.3s ease; /* Smooth transition for the background color */
+    width:100%;
     background-color: white;
 }
 
